# SubtitleExtractor

./: .gitignore  CMakeLists.txt  HANDOFF_PROMPT.txt  LICENSE  README.md  installer.iss
include/: CancellationToken.h  EmbeddedExtractor.h  ExtractorFactory.h  IExtractor.h  Logger.h  MainWindow.h  OcrExtractor.h  ProcessRunner.h  SubtitleEntry.h  SubtitleWriter.h  UpdateChecker.h  WhisperExtractor.h
resources/: app.qrc  app.rc
src/: EmbeddedExtractor.cpp  ExtractorFactory.cpp  Logger.cpp  MainWindow.cpp  OcrExtractor.cpp  ProcessRunner.cpp  SubtitleWriter.cpp  UpdateChecker.cpp  WhisperExtractor.cpp  gui_main.cpp  main.cpp
